# otus

./: CMakeLists.txt  README.md  allocator.h  bayan.cpp  bayan.h  consolebackend.cpp  consolebackend.h  container.h  controller.h  drawerbackend.h  ip_filter.cpp  main.cpp  matrix.h  model.cpp  model.h  parser.cpp  parser.h  printer.h  shapes.h  view.cpp  view.h
.github/workflows/: lesson_1.yml  release.yml
